test/tests/compiler/8_loops/valid/empty_loop_body.plx






pub fn main(none) i32 {
    i: i32 = 2147483642
    loop .. while (i = i - 5) >= 256 {
        ;
    }

    return i
}

