test/tests/compiler/8_loops/invalid_parse/plx1_infinite_loop_3.plx
pub fn main(none) i32 {
    i: i32 = 0
    loop .. i < 10;
    return 0
}
